Rebase, resolve conflicts, format files.